--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-h5py==2.7.0
+h5py
 joblib
 jupyter
 ipywidgets
 jupyter_contrib_nbextensions
-Keras==2.0.6
+Keras
 matplotlib
-nltk==3.2.4
-numpy>=1.11.2
+nltk
+numpy
 opencv
-pandas==0.19.2
-Pillow==4.0.0
-requests==2.12.4
+pandas
+Pillow
+requests
 scikit-learn
 scipy
-tensorflow==1.2.1
-tqdm==4.15.0
-ffmpeg==3.2.4
+tensorflow
+tqdm
+ffmpeg
